--- a/inventory.yml
+++ b/inventory.yml
@@ -1,22 +1,22 @@
 all:
   hosts:
     node1:
-      ansible_host: 3.238.41.66
-      ansible_user: ubuntu
-      ansible_ssh_private_key_file: ./projectkey
+      ansible_host: 10.242.165.26
+      ansible_user: user
+      ansible_ssh_private_key_file: /home/user/.ssh/id_rsa
     node2:
-      ansible_host: 54.147.115.43
-      ansible_user: ubuntu
-      ansible_ssh_private_key_file: ./projectkey
+      ansible_host: 10.242.165.186
+      ansible_user: user
+      ansible_ssh_private_key_file: /home/user/.ssh/id_rsa
     node3:
-      ansible_host: 44.211.60.51
-      ansible_user: ubuntu
-      ansible_ssh_private_key_file: ./projectkey
+      ansible_host: 10.242.165.204
+      ansible_user: user
+      ansible_ssh_private_key_file: /home/user/.ssh/id_rsa
     node4:
-      ansible_host: 44.215.126.68
-      ansible_user: ubuntu
-      ansible_ssh_private_key_file: ./projectkey
+      ansible_host: 10.242.165.23
+      ansible_user: user
+      ansible_ssh_private_key_file: /home/user/.ssh/id_rsa
     node5:
-      ansible_host: 44.198.58.55
-      ansible_user: ubuntu
-      ansible_ssh_private_key_file: ./projectkey
+      ansible_host: 10.242.165.198
+      ansible_user: user
+      ansible_ssh_private_key_file: /home/user/.ssh/id_rsa
